removed flex-wrap to search box in order to avoid button stacking under input in search-box

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ header h2 {
 }
 .search-box form {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding-left: 25px;
@@ -99,7 +98,7 @@ header h2 {
 }
 #map {
     z-index: 10;
-    height: 600px;
+    height: px;
 }
 
 
